--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "egg": "^2.26.0",
     "egg-bin": "^4.14.1",
     "egg-cors": "^2.2.3",
-    "hexo": "^4.2.0"
+    "hexo": "^4.2.0",
+    "jwt-simple": "^0.5.6",
+    "node-rsa": "^1.0.7"
   },
   "scripts": {
     "dev": "egg-bin dev"
