--- a/web/package.json
+++ b/web/package.json
@@ -13,6 +13,7 @@
     "for-editor": "^0.3.4",
     "mobx": "^5.15.0",
     "mobx-react": "5.4.4",
+    "node-rsa": "^1.0.7",
     "qs": "^6.9.1",
     "react": "16.4.1",
     "react-dom": "16.4.1",
