--- a/run/application_config.json
+++ b/run/application_config.json
@@ -89,26 +89,26 @@
     "onerror": {
       "errorPageUrl": "",
       "appErrorFilter": null,
-      "templatePath": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-onerror\\lib\\onerror_page.mustache"
+      "templatePath": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-onerror/lib/onerror_page.mustache"
     },
     "i18n": {
       "defaultLocale": "en_US",
       "dirs": [
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-session\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-security\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-jsonp\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-onerror\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-i18n\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-watcher\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-schedule\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-multipart\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-development\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-logrotator\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-static\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-view\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-cors\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\locales",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\config\\locales"
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-session/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-security/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-jsonp/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-onerror/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-i18n/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-watcher/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-schedule/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-multipart/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-development/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-logrotator/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-static/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-view/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-cors/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/locales",
+        "/Volumes/Extend/workspace/learning/hexo-writer/config/locales"
       ],
       "queryField": "locale",
       "cookieField": "locale",
@@ -119,8 +119,8 @@
     "watcher": {
       "type": "development",
       "eventSources": {
-        "default": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-watcher\\lib\\event-sources\\default",
-        "development": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-watcher\\lib\\event-sources\\development"
+        "default": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-watcher/lib/event-sources/default",
+        "development": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-watcher/lib/event-sources/development"
       }
     },
     "customLogger": {
@@ -143,7 +143,7 @@
       "files": 10,
       "fileExtensions": [],
       "whitelist": null,
-      "tmpdir": "C:\\Users\\ADMINI\\x7e1\\AppData\\Local\\Temp\\egg-multipart-tmp\\hexo-admin",
+      "tmpdir": "/var/folders/pk/xx3wm6h55jqghknx_l66yhj00000gn/T/egg-multipart-tmp/hexo-admin",
       "cleanSchedule": {
         "cron": "0 30 4 * * *"
       }
@@ -167,8 +167,8 @@
     "static": {
       "prefix": "/",
       "dir": [
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\dist",
-        "D:\\Programming\\workspace\\hexo\\hexo-admin\\app\\public"
+        "/Volumes/Extend/workspace/learning/hexo-writer/dist",
+        "/Volumes/Extend/workspace/learning/hexo-writer/app/public"
       ],
       "dynamic": true,
       "preload": false,
@@ -176,7 +176,7 @@
       "maxFiles": 1000
     },
     "view": {
-      "root": "D:\\Programming\\workspace\\hexo\\hexo-admin\\app\\view",
+      "root": "/Volumes/Extend/workspace/learning/hexo-writer/app/view",
       "cache": false,
       "defaultExtension": ".html",
       "defaultViewEngine": "",
@@ -198,6 +198,7 @@
     "pkg": {
       "name": "hexo-admin",
       "dependencies": {
+        "dayjs": "^1.8.18",
         "egg": "^2.26.0",
         "egg-bin": "^4.14.1",
         "egg-cors": "^2.2.3",
@@ -207,9 +208,9 @@
         "dev": "egg-bin dev"
       }
     },
-    "baseDir": "D:\\Programming\\workspace\\hexo\\hexo-admin",
-    "HOME": "C:\\Users\\Administrator",
-    "rundir": "D:\\Programming\\workspace\\hexo\\hexo-admin\\run",
+    "baseDir": "/Volumes/Extend/workspace/learning/hexo-writer",
+    "HOME": "/Users/lynx",
+    "rundir": "/Volumes/Extend/workspace/learning/hexo-writer/run",
     "dump": {
       "ignore": "<Set>"
     },
@@ -241,7 +242,7 @@
       "returnRawBody": true
     },
     "logger": {
-      "dir": "D:\\Programming\\workspace\\hexo\\hexo-admin\\logs\\hexo-admin",
+      "dir": "/Volumes/Extend/workspace/learning/hexo-writer/logs/hexo-admin",
       "encoding": "utf8",
       "env": "local",
       "level": "INFO",
@@ -310,9 +311,12 @@
       "responseTimeout": 60000
     },
     "onClientError": null,
+    "middleware": [
+      "errorHandler"
+    ],
     "coreMiddlewares": "~config~coreMiddleware",
-    "appMiddlewares": [],
-    "appMiddleware": "~config~appMiddlewares",
+    "appMiddlewares": "~config~middleware",
+    "appMiddleware": "~config~middleware",
     "multipartParseOptions": {
       "autoFields": false,
       "defCharset": "utf8",
@@ -334,8 +338,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-session",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-session",
       "version": "3.1.0"
     },
     "security": {
@@ -347,8 +351,8 @@
         "session"
       ],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-security",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-security",
       "version": "2.7.1"
     },
     "jsonp": {
@@ -360,8 +364,8 @@
         "security"
       ],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-jsonp",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-jsonp",
       "version": "2.0.0"
     },
     "onerror": {
@@ -373,8 +377,8 @@
         "jsonp"
       ],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-onerror",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-onerror",
       "version": "2.1.0"
     },
     "i18n": {
@@ -384,8 +388,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-i18n",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-i18n",
       "version": "2.1.1"
     },
     "watcher": {
@@ -395,8 +399,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-watcher",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-watcher",
       "version": "3.1.0"
     },
     "schedule": {
@@ -406,8 +410,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-schedule",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-schedule",
       "version": "3.6.4"
     },
     "multipart": {
@@ -419,8 +423,8 @@
         "schedule"
       ],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-multipart",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-multipart",
       "version": "2.10.1"
     },
     "development": {
@@ -434,8 +438,8 @@
       "env": [
         "local"
       ],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-development",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-development",
       "version": "2.4.3"
     },
     "logrotator": {
@@ -447,8 +451,8 @@
       ],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-logrotator",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-logrotator",
       "version": "3.1.0"
     },
     "static": {
@@ -458,8 +462,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-static",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-static",
       "version": "2.2.0"
     },
     "view": {
@@ -469,8 +473,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-view",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-view",
       "version": "2.1.2"
     },
     "cors": {
@@ -480,8 +484,8 @@
       "dependencies": [],
       "optionalDependencies": [],
       "env": [],
-      "from": "D:\\Programming\\workspace\\hexo\\hexo-admin\\config\\plugin.js",
-      "path": "D:\\Programming\\workspace\\hexo\\hexo-admin\\node_modules\\egg-cors",
+      "from": "/Volumes/Extend/workspace/learning/hexo-writer/config/plugin.js",
+      "path": "/Volumes/Extend/workspace/learning/hexo-writer/node_modules/egg-cors",
       "version": "2.2.3"
     }
   }
