--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "braft-editor": "^2.3.8",
+    "cos-js-sdk-v5": "^0.5.22",
     "dayjs": "^1.8.17",
     "deepcopy": "^2.0.0",
     "element-react": "^1.4.34",
