--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cra-element-ui-mobx",
   "version": "0.1.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "axios": "^0.19.0",
